--- a/views/index.ejs
+++ b/views/index.ejs
@@ -55,35 +55,37 @@
           <div class="card-body">
            <form id="pdfForm" action="/generate-pdf" method="POST">
         
-		<label for="audio">Audio (link):</label>
-        <input type="text" id="audio" name="audio" required><br><br>
+		<label for="audio" class="mb-2">Audio (link):</label>
+        <input type="text" class="mb-2" id="audio" name="audio" required><br>
+		<label for="password">Password (optional):</label>
+        <input type="text" id="password" name="password"><br><br><br>
 		
 		<label for="name">Client:</label>
-        <input type="text" id="name" name="name" required><br><br>
+        <input type="text" id="name" name="name" required><br><br><br>
 		
 		<label for="pname">Project Name / Campaign Name:</label>
-        <input type="text" id="pname" name="pname" required><br><br>
+        <input type="text" id="pname" name="pname" required><br><br><br>
 		
 		<label for="version">Version:</label>
-        <input type="number" id="version" name="version" min="0" max="100" required><br><br>
+        <input type="number" id="version" name="version" min="0" max="100" required><br><br><br>
 		
 		<label for="date">Date:</label>
-        <input type="date" id="date" name="date" required><br><br>
+        <input type="date" id="date" name="date" required><br><br><br>
 		
 		<label for="message">Additional Information:</label><br>
-        <textarea id="message" name="message" rows="5" cols="50" required></textarea><br><br>
+        <textarea id="message" name="message" rows="5" cols="50" maxlength="750" required></textarea><br><br><br>
 		
 		<label for="cdname">Creative Director:</label>
-        <input type="text" id="cdname" name="cdname" required><br><br>
+        <input type="text" id="cdname" name="cdname" required><br><br><br>
 		
 		<label for="producer">Producer:</label>
-        <input type="text" id="producer" name="producer" required><br><br>
+        <input type="text" id="producer" name="producer" required><br><br><br>
 		
 		<label for="writer">Writer:</label>
-        <input type="text" id="writer" name="writer" required><br><br>
+        <input type="text" id="writer" name="writer" required><br><br><br>
 		
 		<label for="acmanager">Account Manager:</label>
-        <input type="text" id="acmanager" name="acmanager" required><br><br>
+        <input type="text" id="acmanager" name="acmanager" required><br><br><br>
         
         <!--<label for="email">Email:</label>
         <input type="email" id="email" name="email" required><br><br>-->
