--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,7 +40,7 @@
 	
 	 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
       <h1>Creative Delivery PDF Creator</h1>
-      <p class="lead">Use this form to generate a one-page PDF that will accompany outgoing audio creative</p>
+      <p class="lead">Use this form to generate a one-page PDF that will accompany outgoing audio creative.</p>
     </div>
 	
     <div class="container">
